src/styles/app.css
/* ... */
video {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
}

.home-video {
  filter: blur(1px) brightness(50%);
  width: calc(100% + 10px);
  height: calc(100% + 10px);
  margin: -2px;
}

.projects-video {
  filter: blur(3px) brightness(30%);
  width: calc(100% + 10px);
  height: calc(100% + 10px);
  margin: -2px;
}

.contact-video {
  filter: blur(1px) brightness(70%);
  width: calc(100% + 10px);
  height: calc(100% + 10px);
  margin: -2px;
}

a {
  text-decoration: none;
  color: inherit;
}

.header {
  position: fixed;
  top: 0;
  width: 100vw;
  height: 60px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  font-family: 'ubuntu', sans-serif;
  background-color: #00888818;
  backdrop-filter: blur(7px);
  border-bottom: 3px solid #008888;
  color: rgba(255, 255, 255, 0.846);
  z-index: 999;
}

@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;900&family=Orbitron&family=Raleway:wght@100;700&family=Six+Caps&display=swap');

.header div h1 {
  font-size: 20px;
}

.header span {
  font-size: 10px;
}

.header-title {
  width: 350px;
  margin-left: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logo {
  width: 40px;
  height: 40px;
  margin-right: 15px;
  opacity: 0.7;
  border-radius: 30px;
}

.header-name {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
  margin-right: 5px;
  letter-spacing: 2px;
}

.logo-link {
  display: flex;
  flex-direction: row;
}

.header-name h1 {
  font-size: 1px;
}

.navbar {
  display: flex;
  width: 50%;
  justify-content: space-around;
  max-width: 600px;
}

.navbar a {
  font-size: medium;
  display: flex;
  padding: 5px;
}

.navbar a:hover {
  border-bottom: 2px solid rgba(255, 255, 0, 0.247);
}

.hamburger {
  display: none;
}

.hide {
  display: none;
}

.show {
  display: flex;
}

.navbar-list {
  display: flex;
  flex-direction: column;
  position: fixed;
  align-items: center;
  justify-content: space-between;
  padding: 10% 0px 170% 0px;
  font-family: 'Ubuntu', sans-serif;
  font-weight: lighter;
  font-size: medium;
  top: 0;
  height: 100%;
  width: 50vw;
  background-color: rgba(0, 0, 0, 0.258);
  color: rgb(127 245 243);
  border: none;
  backdrop-filter: blur(20px);
  transition: transform 0.5s ease-in-out;
  transform: translateX(101%);
  z-index: 9999;
}

.slide-out-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  background-color: rgb(0 255 255);
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  color: rgb(0, 0, 0);
  top: 107px;
  width: 50px;
  height: 77px;
  transition: transform 0.5s ease-in-out;
  transform: translateX(37.5vw);
  z-index: 999;
}

.slide-out-btn-off {
  display: none;
}

#arrow-side-bar-btn {
  width: 20px;
  height: 30px;
}

.navbar-list * {
  background-color: transparent;
}

.navbar-list a {
  display: flex;
  padding-top: 25px;
  padding-bottom: 25px;
  padding-left: 25px;
  padding-right: 25px;
}

.navbar-list span {
  padding-top: 50px;
}

.nav-active {
  display: flex;
  padding: 5px;
  border-bottom: 0.5px solid rgba(95, 158, 160, 0.634);
}

.show-sidebar {
  transform: translateX(200%);
}

.home-cover {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  background-color: rgba(7, 255, 152, 0);
  justify-content: space-around;
}

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Raleway:wght@100;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;900&family=Orbitron&family=Raleway:wght@100;700&family=Six+Caps&family=Ubuntu&display=swap');

.home-text-cover {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  height: 90%;
  font-family: 'Montserrat', sans-serif;
  background-color: rgba(7, 44, 255, 0);
  font-size: 50px;
  color: white;
  z-index: 99;
}

.home-text-cover h2 {
  background-color: transparent;
}

.home-text-cover span {
  padding-bottom: 10px;
}

.home-text-cover p {
  width: 50vw;
  font-size: 25px;
  font-weight: 0;
}

.home-title {
  display: flex;
  flex-direction: row;
}

.Clima-title {
  color: #008888;
}

.LOA-title {
  color: rgba(255, 255, 255, 0.68);
}

.stack-loop {
  width: 300px;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  white-space: nowrap;
  color: rgb(255, 255, 255);
  font-size: 40px;
  font-weight: lighter;
  font-family: 'Montserrat', sans-serif;
}

.stack-loop span {
  display: inline-block;
  white-space: nowrap;
  animation: deslizar 10s linear infinite;
}

@keyframes deslizar {
  0% {
    transform: translateX(40%);
    opacity: 0;
  }

  10% {
    opacity: 1;
  }

  93% {
    opacity: 1;
  }

  100% {
    transform: translateX(-40%);
    opacity: 0;
  }
}

.glow-on-hover {
  width: 150px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  outline: none;
  color: #b5b3b3;
  background: #111;
  cursor: pointer;
  position: relative;
  z-index: 0;
  font-size: 20px;
  border-radius: 10px;
  margin-bottom: 3px;
}

.glow-on-hover:before {
  content: '';
  background: linear-gradient(45deg, #008888, #00A870, #007A7A, #00A870, #00A4AA);
  position: absolute;
  top: -2px;
  left: -2px;
  background-size: 400%;
  z-index: -1;
  filter: blur(5px);
  width: calc(100% + 4px);
  height: calc(100% + 4px);
  animation: glowing 20s linear infinite;
  opacity: 0;
  transition: opacity .3s ease-in-out;
  border-radius: 10px;
}

.glow-on-hover:active {
  color: #000
}

.glow-on-hover:active:after {
  background: transparent;
}

.glow-on-hover:hover:before {
  opacity: 1;
}
/* ... */

